bugfix: full size images (with bleed) are now correctly shown in chrome (removing blank bottom margin) & top-right glitch

--- a/src/css/print/common.css
+++ b/src/css/print/common.css
@@ -95,12 +95,17 @@ body {
     /* Important for BUG-HUNTERS: if set to "0" only, it messes up the layout. it needs to be "0mm" */
     margin-top: 0mm;
     margin-right: 0mm;
-    margin-bottom: 0mm;
     margin-left: 0mm;
+    /* although this should be 0mm, in chrome, it would otherwise leave a white blank bar above the full-page images with bleed */
+    margin-bottom: -5mm;
+    
     @bottom-right {
         display: none;
     }
     @bottom-left {
+        display: none;
+    }
+    @bottom-center {
         display: none;
     }
 }
@@ -112,11 +117,14 @@ body {
 .full-page-image {
     width: 100%;
     height: 100%;
-    overflow:hidden;
+    overflow: visible;
+    z-index: 2;
     display: flex;
     justify-content: center;
     align-items: center;
 }
+
+/* pagedjs_bleed pagedjs_bleed-bottom */
 
 /* size matches the "LTLM front and back cover size.psd" template */
 .full-page-image img {
